Updated state evaluating to be more comprehensive